syntax = "proto3";

package grpc;

option go_package = "example.com/go-car-grpc;go_car_grpc";

service CarManagement {
  rpc CreateNewCar (NewCarParams) returns (Car) {}
  rpc GetCars (GetCarsParams) returns (Data) {}
  rpc GetOneCar (GetOneCarParams) returns (Car) {}
  rpc UpdateCar (UpdateCarParams) returns (Car) {}
}

message NewCarParams {
  string mark = 1;
  string model = 2;
  int32 price = 3;
}

message Car {
  int32 id = 1;
  string mark = 2;
  string model = 3;
  int32 price = 4;
}

message GetCarsParams {
}

message CarsList {
  repeated Car cars = 1;
}

message Data {
  string Message = 1;
  repeated Car data = 2;
}

message GetOneCarParams {
  string id = 4;
}

message UpdateCarParams {
  int32 id = 1;
  string mark = 2;
  string model = 3;
  int32 price = 4;
}